--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 	height: 50px;
 	background-color: var(--fuzzy-wuzzy);
 	align-items: center;
-	border: 1px dotted black;
+	/* border: 1px solid black; */
 }
 
 .nav-btn {
