--- a/style.css
+++ b/style.css
@@ -346,10 +346,42 @@ button {
 	border-top: var(--mandarin) 6px solid;
 }
 #question {
-	display: grid;
+	display: flex;
+	flex-direction: row;
 	margin-top: 20px;
 	border-bottom: var(--mandarin) 6px solid;
 }
+
+@media screen and (max-width: 1100px) {
+	#question {
+		flex-direction: column;
+	}
+}
+
+#questionNumber{
+	padding: 0 20px;
+	margin: 0 30px;
+	background-color: var(--jonquil);
+	color: var(--star-command-blue);
+	display: flex;
+	align-items: center;
+	font-size: 3rem;
+	border-radius: 5%;
+	font-weight: 900;
+}
+
+@media screen and (max-width: 1100px) {
+	#questionNumber {
+		flex-direction: column;
+		margin: 10px 0;
+	}
+}
+
+
+#questionText {
+	flex-grow: 1;
+}
+
 #ScoreContainer {
 	display: flex !important;
 	align-items: center;
