--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Passion+One&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Chango&family=Sigmar+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Chango&family=Sigmar+One&display=swap");
 
 :root {
 	--star-command-blue: #067bc2ff;
@@ -15,6 +15,8 @@
 	--bright-teal-shade: #b8f2e684;
 	--mandarin-shade: #f376485c;
 	--fuzzy-wuzzy-shade: #d560625d;
+
+	--base-tilecolour: #f376481e;
 
 	--main-font: "Anonymous Pro";
 	--accent-font: "Passion One";
@@ -115,8 +117,9 @@ body {
 	/* background-color: #333; */
 	color: white;
 	cursor: pointer;
-	transform: scale(1.04);
+	/* transform: scale(1.02); */
 	/* opacity: 0.95; */
+	--tilecolour: var(--star-command-blue-shade);
 }
 
 .tile p {
@@ -127,93 +130,98 @@ body {
 }
 
 .tile:hover p {
-	font-size: 2.2em;
-	text-shadow: 2px 2px 10px black;
+	font-size: 2.1em;
+	/* text-shadow: 2px 2px 10px black; */
+	/* transition: font-size 0.1s; */
 }
 
-.hidden{
+.hidden {
 	display: none;
 }
 
 .tile-geography {
 	background: url("files/geography.jpg"),
-		linear-gradient(var(--jonquil-shade), rgba(0, 0, 0, 0.95));
+		linear-gradient(var(--tilecolour, var(--base-tilecolour)), rgba(0, 0, 0, 0.95));
 	background-blend-mode: overlay;
 	background-size: cover;
 }
+
 .tile-music {
 	/* background-image: url('files/music.jpeg'); */
 	background: url("files/music.jpeg"),
-		linear-gradient(var(--star-command-blue-shade), rgba(0, 0, 0, 0.95));
+		linear-gradient(var(--tilecolour, var(--base-tilecolour)), rgba(0, 0, 0, 0.95));
 	background-blend-mode: overlay;
 	background-size: cover;
 }
 .tile-literature {
 	/* background-image: url('files/literature.jpg'); */
 	background: url("files/literature.jpg"),
-		linear-gradient(var(--mandarin-shade), rgba(0, 0, 0, 0.95));
+	linear-gradient(var(--tilecolour, var(--base-tilecolour)), rgba(0, 0, 0, 0.95));
 	background-blend-mode: overlay;
 	background-size: cover;
 }
 .tile-science {
 	background: url("files/science.jpg"),
-		linear-gradient(var(--bright-teal-shade), rgba(0, 0, 0, 0.95));
+	linear-gradient(var(--tilecolour, var(--base-tilecolour)), rgba(0, 0, 0, 0.95));
 	background-blend-mode: overlay;
 	background-size: cover;
+	background-position: right;
 }
 .tile-cultures {
 	background: url("files/cultures.jpg"),
-		linear-gradient(var(--medium-turquoise-shade), rgba(0, 0, 0, 0.95));
+	linear-gradient(var(--tilecolour, var(--base-tilecolour)), rgba(0, 0, 0, 0.95));
 	background-blend-mode: overlay;
 	background-size: cover;
 }
 .tile-animals {
 	background: url("files/animals.jpg"),
-		linear-gradient(var(--fuzzy-wuzzy-shade), rgba(0, 0, 0, 0.95));
+	linear-gradient(var(--tilecolour, var(--base-tilecolour)), rgba(0, 0, 0, 0.95));
 	background-blend-mode: overlay;
 	background-size: cover;
 }
 .tile-paisley {
 	background: url("files/paisley.jpg"),
-		linear-gradient(var(--mandarin-shade), rgba(0, 0, 0, 0.95));
+	linear-gradient(var(--tilecolour, var(--base-tilecolour)), rgba(0, 0, 0, 0.95));
 	background-blend-mode: overlay;
 	background-size: cover;
 }
 .tile-history {
 	background: url("files/history.jpg"),
-		linear-gradient(var(--jonquil-shade), rgba(0, 0, 0, 0.95));
+	linear-gradient(var(--tilecolour, var(--base-tilecolour)), rgba(0, 0, 0, 0.95));
 	background-blend-mode: overlay;
 	background-size: cover;
 }
 
 .tile-friends {
 	background: url("files/friends.jpg"),
-		linear-gradient(var(--bright-teal-shade), rgba(0, 0, 0, 0.95));
+	linear-gradient(var(--tilecolour, var(--base-tilecolour)), rgba(0, 0, 0, 0.95));
 	background-blend-mode: overlay;
 	background-size: cover;
 }
 .tile-food {
 	background: url("files/food.jpg"),
-		linear-gradient(var(--medium-turquoise-shade), rgba(0, 0, 0, 0.95));
+	linear-gradient(var(--tilecolour, var(--base-tilecolour)), rgba(0, 0, 0, 0.95));
 	background-blend-mode: overlay;
 	background-size: cover;
+	background-position-x: 60%;
 }
 .tile-greek-mythology {
 	background: url("files/greek-mythology.jpg"),
-		linear-gradient(var(--medium-turquoise-shade), rgba(0, 0, 0, 0.95));
+	linear-gradient(var(--tilecolour, var(--base-tilecolour)), rgba(0, 0, 0, 0.95));
 	background-blend-mode: overlay;
 	background-size: cover;
 	font-size: 1em;
 }
 .tile-disney {
 	background: url("files/disney.jpg"),
-		linear-gradient(var(--bright-teal-shade), rgba(0, 0, 0, 0.95));
+	linear-gradient(var(--tilecolour, var(--base-tilecolour)), rgba(0, 0, 0, 0.95));
 	background-blend-mode: overlay;
 	background-size: cover;
+	background-position: center;
 }
 .tile-sports {
 	background: url("files/sports.jpg"),
-		linear-gradient(var(--medium-turquoise-shade), rgba(0, 0, 0, 0.95));
+	linear-gradient(var(--tilecolour, var(--base-tilecolour)), rgba(0, 0, 0, 0.95));
 	background-blend-mode: overlay;
 	background-size: cover;
 }
@@ -288,6 +296,10 @@ body {
 		margin-bottom: 10px; /* Add margin between buttons */
 		/* display: none; */
 	}
+
+	#nav a {
+		width: 100%;
+	}
 }
 
 @media only screen and (max-width: 600px) {
@@ -359,7 +371,7 @@ button {
 	}
 }
 
-#questionNumber{
+#questionNumber {
 	padding: 0 20px;
 	margin: 0 30px;
 	background-color: var(--jonquil);
@@ -368,7 +380,7 @@ button {
 	align-items: center;
 	font-size: 3rem;
 	border-radius: 5%;
-	font-family: 'Sigmar One';
+	font-family: "Sigmar One";
 }
 
 @media screen and (max-width: 1100px) {
@@ -378,7 +390,6 @@ button {
 	}
 }
 
-
 #questionText {
 	flex-grow: 1;
 }
@@ -387,9 +398,8 @@ button {
 	display: flex !important;
 	align-items: center;
 	justify-content: flex-start;
-	
+
 	flex-direction: row;
-	
 }
 #answerContainer {
 	display: flex;
@@ -415,28 +425,27 @@ button {
 	font-size: 2rem;
 }
 
-
 @media screen and (max-width: 1100px) {
-	.answerButton{
+	.answerButton {
 		font-size: 1.6rem;
 	}
 }
 
 @media only screen and (max-width: 600px) {
-	.answerButton{
+	.answerButton {
 		font-size: 1rem;
 	}
 }
 
 @media only screen and (min-width: 1200px) {
-	.answerButton:hover{
+	.answerButton:hover {
 		transition: background-color 0.2s;
 		background-color: rgb(240, 240, 240);
 		color: black;
 	}
 }
 .answerButton:focus {
-	border:black 4px solid;
+	border: black 4px solid;
 	color: black;
 }
 .correctBG {
