--- a/style.css
+++ b/style.css
@@ -226,6 +226,13 @@ body {
 	background-blend-mode: overlay;
 	background-size: cover;
 }
+.tile-linguistics {
+	background: url("files/linguistics.jpg"),
+	linear-gradient(var(--tilecolour, var(--base-tilecolour)), rgba(0, 0, 0, 0.95));
+	background-blend-mode: overlay;
+	background-size: cover;
+	background-position-x: center;
+}
 
 #footer {
 	display: flex;
