font-size changes for mobile compatibility

--- a/style.css
+++ b/style.css
@@ -230,6 +230,7 @@ body {
 	background-blend-mode: overlay;
 	background-size: cover;
 	background-position-x: center;
+	font-size: 1.3em;
 }
 
 #footer {
